--- a/res/layout/activity_file_properties.xml
+++ b/res/layout/activity_file_properties.xml
@@ -14,15 +14,28 @@
 
 	    android:orientation="vertical"
 	    android:weightSum="6"
-	    android:id="@+id/file_title_layout">      	     
-   
-    
+	    android:id="@+id/file_title_layout">   
+	    
+        <RelativeLayout 
+            android:layout_width="match_parent"
+	    	android:layout_height="wrap_content"
+	    	android:gravity="center_horizontal"
+            android:layout_weight="5">
+	        
 	     <ImageView 
 	         android:id="@+id/file_properties_image"
 	         android:layout_width="wrap_content"
-	         android:layout_gravity="center_horizontal"
-	         android:layout_height="200dp"
-	         android:layout_weight="5"/>
+	         android:layout_height="200dp"/>
+	     
+	     <ImageView 
+	         android:id="@+id/file_properties_image_link"
+	         android:layout_width="wrap_content"
+	         android:src="@drawable/get_link_circle_white_ic"
+	         android:layout_height="70dp"
+	         android:layout_alignLeft="@id/file_properties_image"
+        	 android:layout_alignBottom="@id/file_properties_image" />	
+	     
+	     </RelativeLayout>
 	     
 	     <TextView
 	        android:id="@+id/file_properties_name"
