Task #1461 - Rubbish bin adapter (new options and text)

--- a/res/layout/item_file_list.xml
+++ b/res/layout/item_file_list.xml
@@ -91,7 +91,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_public_link_list"
 		android:background="@null" 
-        android:layout_centerVertical="true"
+        android:layout_marginTop="15dp"
         android:layout_toLeftOf="@id/file_list_three_dots"/> 
         
     <ImageView
@@ -100,7 +100,7 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_public_link_list"
 		android:background="@null" 
-        android:layout_centerVertical="true"
+        android:layout_marginTop="15dp"
         android:paddingRight="7dp" 
        	android:layout_alignParentRight="true"/> 
                      
@@ -338,7 +338,39 @@
 					android:textColor="#ffffff"
 					android:textSize="10sp"
 					android:textStyle="bold"/>
-		         </RelativeLayout>
+		      </RelativeLayout>
+		      
+		    <RelativeLayout
+                android:id="@+id/file_list_option_remove_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" >
+		            
+		         <ImageView
+		            android:id="@+id/file_list_option_remove"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/ic_delete"
+		            style="@style/dialogActionButton"
+		            android:layout_centerHorizontal="true"
+		            android:layout_alignParentTop="true"
+		            android:paddingTop="2dp"
+	             />
+		         
+		         <TextView 
+                    android:id="@+id/file_list_option_remove_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/context_delete"
+                    android:layout_centerHorizontal="true"
+                     android:paddingBottom="10dp"
+					android:layout_alignParentBottom="true"
+					android:textColor="#ffffff"
+					android:textSize="10sp"
+					android:textStyle="bold"/>
+		      </RelativeLayout>
+		         
+		         
 		     <RelativeLayout
                 android:id="@+id/file_list_option_overflow_layout"
                 android:layout_width="match_parent"
