Bug #1476 - User data (file system, cache, thumbs, previews, etc) should be remove after logout

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -145,9 +145,9 @@
         
 		    <ImageView 
 		        android:id="@+id/login_mega_logo"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:src="@drawable/mega_ic"
+		        android:layout_width="200dp"
+		        android:layout_height="200dp"
+		        android:src="@drawable/ic_launcher"
 		        android:layout_marginTop="20dp"/>
 		    
 		    <TextView
